# unicorn-api

./: .gitignore  README.md  pyproject.toml
app/: app.py  eeg_lib.py  eeg_utils.py
app/unicorn/: unicorn.py  unicorn_direct_bt.py
