[project]
name = "unicorn-api"
version = "0.1.0"
description = "stream data from a unicorn to websocket"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.113.0",
    "lspopt>=1.3.0",
    "mne>=1.8.0",
    "neurokit2>=0.2.10",
    "pandas>=2.2.2",
    "pydantic-settings>=2.4.0",
    "pydantic>=2.9.0",
    "pyserial>=3.5",
    "python-picard>=0.7",
    "scipy>=1.14.1",
    "setuptools>=74.1.2",
    "six>=1.16.0",
    "yasa>=0.6.5",
]
